src/test/resources/errors/array-assign.intp
val a = 2
a[0] = 13.3